--- a/app/src/main/res/layout-night/fragment_quake.xml
+++ b/app/src/main/res/layout-night/fragment_quake.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/backgroundNightMode"
     style="@style/AppTheme"
-    tools:context=".views.QuakeFragment">
+    tools:context=".views.fragments.QuakeFragment">
 
     <!-- CardView de informacion-->
     <androidx.constraintlayout.widget.Guideline
