--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,30 +13,11 @@
         android:id="@+id/include"
         layout="@layout/toolbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <!-- Fragment de la lista de quakes -->
-    <fragment
-        android:id="@+id/fragment"
-        class="cl.figonzal.lastquakechile.views.QuakeFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include"
-        tools:layout="@layout/fragment_quake" />
-
-    <fragment
-        android:id="@+id/fragmentmap"
-        class="cl.figonzal.lastquakechile.views.MapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include"
-        tools:layout="@layout/fragment_map" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
