Refactor total del modo noche
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout-night/toolbar_layout.xml
+++ b/app/src/main/res/layout-night/toolbar_layout.xml
@@ -43,7 +43,7 @@
                 android:layout_gravity="bottom"
                 android:background="@android:color/transparent"
                 app:tabGravity="fill"
-                app:tabIndicatorColor="@color/colorSecondary"
+                app:tabIndicatorColor="@color/colorSecondaryNightMode"
                 app:tabIndicatorFullWidth="true"
                 app:tabIndicatorGravity="bottom"
                 app:tabMode="fixed"
@@ -61,5 +61,3 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
