--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- LIGHT COLORS-->
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryVariant">#303F9F</color>
     <color name="colorSecondary">#00bbff</color>
@@ -11,18 +12,20 @@
     <color name="colorSurface">#FFFFFF</color>
     <color name="colorOnSurface">#000</color>
 
+    <color name="background">#efefef</color>
+
+    <!-- Night Color-->
+    <color name="colorPrimaryNightMode">#253561</color>
+    <color name="colorPrimaryVariantNightMode">#1C2746</color>
+    <color name="colorSecondaryNightMode">#006994</color>
+    <color name="colorSurfaceNightMode">#323236</color>
+    <color name="backgroundNightMode">#28282C</color>
+
     <color name="white">#fff</color>
     <color name="black">#000</color>
     <color name="grey">#efefef</color>
     <color name="grey_dark">#ADADAD</color>
     <color name="green_dark">#008e4d</color>
-
-    <!-- Night Color-->
-    <color name="colorPrimaryNightMode">#253561</color>
-    <color name="colorPrimaryDarkNightMode">#1C2746</color>
-    <color name="colorAccentNightMode">#006994</color>
-    <color name="backgroundNightMode">#28282C</color>
-
 
     <!-- Colores para cada magnitud-->
     <color name="magnitude1">#006400</color>
