--- a/app/src/main/res/menu/fragment_menu.xml
+++ b/app/src/main/res/menu/fragment_menu.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <item
         android:id="@+id/refresh_menu"
         android:icon="@drawable/ic_refresh_white_24dp"
         android:orderInCategory="2"
         android:title="@string/refresh"
-        app:showAsAction="always|collapseActionView" />
+        app:showAsAction="always|collapseActionView"
+        tools:ignore="AlwaysShowAction" />
     <item
         android:id="@+id/search_menu"
         android:icon="@drawable/ic_search_white_24dp"
@@ -16,7 +18,7 @@
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
 
-    <group android:id="@+id/dot">
+    <group android:id="@+id/dot_menu">
 
         <item
             android:id="@+id/invite_menu"
@@ -24,19 +26,10 @@
             android:title="@string/invite"
             app:showAsAction="never" />
         <item
-            android:id="@+id/contact_menu"
-            android:orderInCategory="5"
-            android:title="@string/contact"
-            android:visible="false"
-            app:showAsAction="never" />
-        <item
             android:id="@+id/settings_menu"
             android:orderInCategory="4"
             android:title="@string/settings"
             app:showAsAction="never" />
-
-
     </group>
-
 
 </menu>
