--- a/app/src/main/res/menu/fragment_menu.xml
+++ b/app/src/main/res/menu/fragment_menu.xml
@@ -18,7 +18,7 @@
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
 
-    <group android:id="@+id/dot_menu">
+    <group>
 
         <item
             android:id="@+id/invite_menu"
