--- a/app/src/main/res/anim/anim_pulse.xml
+++ b/app/src/main/res/anim/anim_pulse.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <alpha
+        android:duration="800"
+        android:fromAlpha="0.0"
+        android:toAlpha="1.0" />
+
     <scale
         android:duration="750"
         android:fromXScale="1"
