--- a/app/src/main/res/anim/anim_textview.xml
+++ b/app/src/main/res/anim/anim_textview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true">
 
     <alpha
         android:duration="500"
@@ -8,7 +9,7 @@
 
     <translate
         android:duration="500"
-        android:fromYDelta="-50"
-        android:toYDelta="0" />
+        android:fromYDelta="0"
+        android:toYDelta="50" />
 
 </set>
