--- a/app/src/main/res/menu/fragment_menu.xml
+++ b/app/src/main/res/menu/fragment_menu.xml
@@ -25,9 +25,15 @@
             android:orderInCategory="3"
             android:title="@string/invite"
             app:showAsAction="never" />
+
+        <item
+            android:id="@+id/changelog_menu"
+            android:orderInCategory="4"
+            android:title="Versiones"
+            app:showAsAction="never" />
         <item
             android:id="@+id/settings_menu"
-            android:orderInCategory="4"
+            android:orderInCategory="5"
             android:title="@string/settings"
             app:showAsAction="never" />
     </group>
