--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,12 +5,18 @@
 
         <item
             android:id="@+id/invite_menu"
-            android:orderInCategory="3"
+            android:orderInCategory="1"
             android:title="@string/invite"
+            app:showAsAction="never" />
+
+        <item
+            android:id="@+id/changelog_menu"
+            android:orderInCategory="2"
+            android:title="Versiones"
             app:showAsAction="never" />
         <item
             android:id="@+id/settings_menu"
-            android:orderInCategory="4"
+            android:orderInCategory="3"
             android:title="@string/settings"
             app:showAsAction="never" />
     </group>
