--- a/app/src/main/res/layout/activity_change_log.xml
+++ b/app/src/main/res/layout/activity_change_log.xml
@@ -4,21 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangeLogActivity">
+    android:theme="@style/AppTheme"
+    tools:context=".views.activities.ChangeLogActivity">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/toolbar_no_main"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_change_log"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <include layout="@layout/toolbar_no_main" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_change_log"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
+        app:layout_constraintTop_toBottomOf="@+id/app_bar_change_log" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
