--- a/app/src/main/res/layout/card_view_change_log.xml
+++ b/app/src/main/res/layout/card_view_change_log.xml
@@ -48,7 +48,7 @@
             android:paddingTop="2dp"
             android:paddingEnd="10dp"
             android:paddingBottom="2dp"
-            android:text="Última"
+            android:text="@string/ultima_badge"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold"
