--- a/app/src/main/res/menu/fragment_menu.xml
+++ b/app/src/main/res/menu/fragment_menu.xml
@@ -29,7 +29,7 @@
         <item
             android:id="@+id/changelog_menu"
             android:orderInCategory="4"
-            android:title="Historial de versiones"
+            android:title="@string/change_logs"
             app:showAsAction="never" />
         <item
             android:id="@+id/settings_menu"
