--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -12,7 +12,7 @@
         <item
             android:id="@+id/changelog_menu"
             android:orderInCategory="2"
-            android:title="Historial de versiones"
+            android:title="@string/change_logs"
             app:showAsAction="never" />
         <item
             android:id="@+id/settings_menu"
