--- a/app/src/main/res/drawable/ic_fab_gmail.xml
+++ b/app/src/main/res/drawable/ic_fab_gmail.xml
@@ -1,10 +1,10 @@
-<!-- drawable/gmail.xml -->
+<!--drawable/gmail.xml-->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="24dp"
     android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
         android:fillColor="@color/white"
-        android:pathData="M20,18H18V9.25L12,13L6,9.25V18H4V6H5.2L12,10.25L18.8,6H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z" />
+        android:pathData="M20 18h-2V9.25L12 13 6 9.25V18H4V6h1.2l6.8 4.25L18.8 6H20m0-2H4C2.89 4 2 4.89 2 6v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6c0-1.11-0.9-2-2-2z" />
 </vector>
