Tabs ahora tienen iconos, cambio de tab listado por tab sismos
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -43,9 +43,11 @@
                 android:layout_gravity="bottom"
                 android:background="@android:color/transparent"
                 app:tabGravity="fill"
+                app:tabIconTint="@color/white"
                 app:tabIndicatorColor="@color/colorSecondary"
                 app:tabIndicatorFullWidth="true"
                 app:tabIndicatorGravity="bottom"
+                app:tabInlineLabel="true"
                 app:tabMode="fixed"
                 app:tabSelectedTextColor="@color/white"
                 app:tabTextColor="@color/grey_dark" />
