--- a/app/src/main/res/layout/card_view_reports.xml
+++ b/app/src/main/res/layout/card_view_reports.xml
@@ -23,7 +23,7 @@
             android:contentDescription="@string/icono_reporte_mensual"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_assessment_black_24dp" />
+            app:srcCompat="@drawable/ic_report_24dp" />
 
         <TextView
             android:id="@+id/tv_title_report"
