Correccion de google map scrolling en viewpager2
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

Took 45 minutes

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".views.fragments.MapFragment">
 
-    <com.google.android.gms.maps.MapView
+    <!-- own view of map to solve scrolling with viewpager2-->
+    <cl.figonzal.lastquakechile.views.MapViewInScroll
         android:id="@+id/map"
         android:layout_width="0dp"
         android:layout_height="0dp"
