--- a/app/src/main/res/layout-night/info_windows.xml
+++ b/app/src/main/res/layout-night/info_windows.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/backgroundNightMode"
-    android:theme="@style/AppTheme">
+    android:theme="@style/InfoWindowsTheme">
 
     <ImageView
         android:id="@+id/iv_iw_mag_color"
