--- a/app/src/main/res/layout-night/overlay.xml
+++ b/app/src/main/res/layout-night/overlay.xml
@@ -2,5 +2,5 @@
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:alpha="0.85"
-    android:background="@color/colorPrimaryNightMode"
-    android:elevation="5dp" />
+    android:elevation="5dp"
+    android:theme="@style/OverlayTheme" />
