Compartir sismo en Twitter
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

Took 2 hours 0 minutes

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="standard_65">65dp</dimen>
     <dimen name="standard_130">130dp</dimen>
+    <dimen name="standard_195">195dp</dimen>
 </resources>
