--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -9,6 +9,37 @@
     tools:context=".views.activities.QuakeDetailsActivity">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_twitter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#1da1f2"
+        android:contentDescription="@string/boton_flotante_twitter"
+        app:elevation="6dp"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_share"
+        app:layout_constraintEnd_toEndOf="@+id/fab_share"
+        app:layout_constraintStart_toStartOf="@+id/fab_share"
+        app:layout_constraintTop_toTopOf="@+id/fab_share"
+        app:srcCompat="@drawable/ic_fab_twitter"
+        app:tint="@color/white" />
+
+    <TextView
+        android:id="@+id/fab_text_tw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:elevation="6dp"
+        android:fontFamily="sans-serif"
+        android:text="@string/fab_twitter"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_twitter"
+        app:layout_constraintEnd_toStartOf="@+id/fab_twitter"
+        app:layout_constraintTop_toTopOf="@+id/fab_twitter" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_gmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
