--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -23,6 +23,7 @@
         android:id="@+id/iv_icon_app"
         android:layout_width="170dp"
         android:layout_height="170dp"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/icono_app"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,6 +37,7 @@
         android:id="@+id/tv_app_name"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:background="@android:color/transparent"
         android:text="@string/app_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textColor="@color/grey"
@@ -45,12 +47,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_icon_app" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_welcome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:text="@string/invitation_welcome"
+        android:theme="@style/Widget.MaterialComponents.Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/iv_icon_app"
         app:layout_constraintStart_toStartOf="@+id/iv_icon_app" />
