Correcciones de mapas
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 17 minutes

--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -181,9 +181,10 @@
                 app:layout_constraintStart_toStartOf="@+id/izquierda"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <com.google.android.gms.maps.MapView
-                    android:id="@+id/map"
+                <fragment
+                    android:id="@+id/map_fragment"
                     android:layout_width="match_parent"
+                    class="com.google.android.gms.maps.MapFragment"
                     android:layout_height="match_parent" />
 
             </com.google.android.material.card.MaterialCardView>
