Actividades y fragments en kotlin
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 44 seconds

--- a/app/src/main/res/layout/fragment_quake.xml
+++ b/app/src/main/res/layout/fragment_quake.xml
@@ -26,6 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
+        android:id="@+id/card_view_information"
         layout="@layout/card_view_information"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
