--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -11,7 +11,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <include layout="@layout/toolbar_no_main" />
+        <include
+            android:id="@+id/toolbar_no_main"
+            layout="@layout/toolbar_no_main" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
