--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.fragments.ReportsFragment">
+    tools:context=".reports_feature.ui.ReportsFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/izquierda"
